--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,19 @@ body {
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+  background: #272730;
+  color: white;
+}
+
+#footer-btns{
+  padding-top: 8px;
+  padding-right: 8px;
+  padding-bottom: 8px;
+  position: fixed;
+  align-items: flex-end;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 47px;
+  background-color: #202030;
 }
